--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h2>Heading One</h2>
 <p>This is for paragraph line</p>
+
+<h3>This is heading 3</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, cupiditate?</p>
